--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,3 +27,17 @@ jobs:
           mvn clean
           mvn -B package --file pom.xml
           
+
+
+      - name: Build Docker Image
+        uses: docker/build-push-action@v2
+        with:
+         context: .
+         dockerfile: Dockerfile
+         push: false
+         tags: ${{ secrets.DOCKER_HUB_USERNAME }}/spring-boot-app:today
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
