--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,4 +48,4 @@ jobs:
           context: .
           dockerfile: Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/spring-boot-for-beginners:today
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/spring-boot-app:today
